--- a/sesac/src/main/resources/application.yml
+++ b/sesac/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      username: "root"
-      password: "sql123123"
-    url: "jdbc:mysql://localhost:3306/sesac?serverTimezone=UTC&characterEncoding=UTF-8"
+      username: ${USERNAME}
+      password: ${PASSWORD}
+    url: ${DB_URL}
 
